👀 Talha changes before directory structure setup

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -12,7 +12,7 @@
       <a class="nav-link" href="#">Record Lecture</a>
     </li>
     <li class="btn btn-outline-dark nav-item px-3 ml-2">
-      <a class="nav-link" href="#">Invite</a>
+      <a class="nav-link" href="#">Enroll Teachers</a>
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
