✔ Academyadmin-routing.module.ts added

--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -1,3 +1,4 @@
 <p>
-  academyadmindashboard works!
+    ✔ Class Card: E:\FYP-AlTaleem\Dev\coreui-free-angular-admin-template\src\app\views\base\createquiz\createquiz.component.html
+    ❌Requests: Card
 </p>
