--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -1,3 +1,14 @@
 <p>
   academyadmindashboard works!
+  * 
+  * Logout Button
+  * Class Cards
+  * Profile Page
+  * Academy profile page
+  * Invitation Button
+  * Graphs
+  * Right Bar
+  * Notifications
+  * Requests Teacher Student
+  * Request Cards
 </p>
