--- a/src/app/components/users/academyadmin/students/students.component.html
+++ b/src/app/components/users/academyadmin/students/students.component.html
@@ -1,4 +1,8 @@
 <p>
   Filters hongy, k classroom k students daikhna chaah ra, ya poori academy k
   students ya kisi specific class k specific student ko daikhna chaah ra
+
+  * Students cards
+  * Student profile page
+
 </p>
