--- a/src/app/components/users/academyadmin/teachers/teachers.component.html
+++ b/src/app/components/users/academyadmin/teachers/teachers.component.html
@@ -1,3 +1,4 @@
 <p>
   Teacehrs k filters hongy, like poori academy k teacehrs daikhny an, ya class k teacehrs ya phr kisi subject k/ka teacehr daikhna a
+* Teacher Card
 </p>
