--- a/src/app/components/users/academyadmin/inviteteacher/inviteteacher.component.html
+++ b/src/app/components/users/academyadmin/inviteteacher/inviteteacher.component.html
@@ -1,4 +1,4 @@
 <p>
-  filters show honngy k Class k hisaab c available teacehrs ko search kr k
+  filters show honngy k Class k hisaab c available teachers ko search kr k
   invite krna a ya subject k hisaab c, ya class aur subject dono k hisaab c
 </p>
