--- a/src/app/components/users/student/studentdashboard/studentdashboard.component.html
+++ b/src/app/components/users/student/studentdashboard/studentdashboard.component.html
@@ -1,10 +1,12 @@
+<h1>Here i am....</h1>
+
 <div class="py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" [routerLink]="['/student/profile']">
               <i class="fa d-inline fa-lg fa-stop-circle"></i> <b>Al-Taleem</b>
             </a>
             <button
