✔ routing-issue resolved hashStrategy in routing was causing problem, now resolved alhamdulillah

--- a/src/app/components/users/academyadmin/academyadmin.component.html
+++ b/src/app/components/users/academyadmin/academyadmin.component.html
@@ -1,3 +1,2 @@
-<p>
-  root component k tor p act kry ga, aur NavBar aur SideBar hogi iss mn
-</p>
+<p>root component k tor p act kry ga, aur NavBar aur SideBar hogi iss mn</p>
+<router-outlet></router-outlet>
