--- a/src/app/components/users/academyadmin/subjects/subjects.component.html
+++ b/src/app/components/users/academyadmin/subjects/subjects.component.html
@@ -1,5 +1,28 @@
-<p>
-  subjects works!
-  * Subject Card
-  * Modal
-</p>
+<div class="animated fadeIn">
+    <div class="row">
+      <div class="col-4">
+        <div class="card text-white bg-dark">
+          <div class="card-header h4 ">Classroom</div>
+          <div class="card-body">
+            <div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Teacher : <strong>Tuba</strong>
+                </li>
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Attendance : <strong>15/30</strong>
+                </li>
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Assignments : <strong>2</strong>
+                </li>
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Quizzes : <strong>2</strong>
+                </li>
+                <li class="list-group-item bg-dark p-1">Performance Graph</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
